production/common/js/bower/requirejs/tests/error/d.js
define(["b"],function(n){return{name:"d",b:n}});